# pragmatic-django

./: LICENSE.md  README.md
django-reusable-app-template/: README.md  pyproject.toml  tox.ini
django-reusable-app-template/src/reusable_app/: apps.py  models.py
django-reusable-app-template/tests/: conftest.py  factories.py  settings.py  test_user_changes_registration.py
django-reusable-app-template/tests/myapp/: models.py
